gobmkida/c1/do_play_aftermath
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_play_aftermath/src/engine/aftermath.c:1363:31: error: use of undeclared identifier 'aftermath'
white_control = ( _DWORD *)( &aftermath + 1632); 
                              ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_play_aftermath/src/engine/aftermath.c:1365:17: error: use of undeclared identifier 'aftermath'
white_control = aftermath.white_control; 
                ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_play_aftermath/src/obj/1/aftermath.o] Error 1
